--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
         const root = document.getElementById('root');
         
         const App =() => {
-            const [data, setData] = React.useState(0);
-            console.log(data);
-            const countUp = () => {
-                setData(data + 1);
+            const [minutes, setMinutes] = React.useState();
+            const onChange = (event) => {
+                setMinutes(event.target.value);
             }
-            
             return (
                 <div>
-                    <h3>Total Clicks : {data}</h3>
-                    <button onClick={countUp}>Click me</button>
-                </div>)};
+                    <h1>Super Converter</h1>
+                    <label for="minutes">Minutes</label>
+                    <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange}/>
+                    <h4>You want to convert {minutes}</h4>
+                    <label for="hours">Hours</label>
+                    <input id="hours" placeholder="Hours" type="number"/>
+
+                </div>
+            )};
         ReactDOM.render(<App />, root);
     </script>
 </html>
