--- a/index.html
+++ b/index.html
@@ -1,30 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body>
-        <div id="root"></div>
-    </body>
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.18.13/babel.min.js" integrity="sha512-PRl9KbPVEMeO1HV3BU5hcxpipzo2EVLe+tvWfLJf0A7PnKCfShArjZ2iXVAVo8ffpBSfRO0K58TYuquQvVSeVA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/babel">
-        const root = document.getElementById('root');
-        
-        const App =() => {
-            const [minutes, setMinutes] = React.useState();
-            const onChange = (event) => {
-                setMinutes(event.target.value);
-            }
-            return (
-                <div>
-                    <h1>Super Converter</h1>
-                    <label for="minutes">Minutes</label>
-                    <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange}/>
-                    <h4>You want to convert {minutes}</h4>
-                    <label for="hours">Hours</label>
-                    <input id="hours" placeholder="Hours" type="number"/>
 
+<body>
+    <div id="root"></div>
+</body>
+<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.18.13/babel.min.js"
+    integrity="sha512-PRl9KbPVEMeO1HV3BU5hcxpipzo2EVLe+tvWfLJf0A7PnKCfShArjZ2iXVAVo8ffpBSfRO0K58TYuquQvVSeVA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/babel">
+    const root = document.getElementById('root');
+
+    const MinutesToHours = () => {
+        const [amount, setAmount] = React.useState(0);
+        const [inverted, setInverted] = React.useState(false);
+        const onChange = (event) => {
+            setAmount(event.target.value);
+        }
+        const reset = () => {
+            setAmount(0);
+        }
+        const onInvert = () => {
+            reset();
+            setInverted(current => !current);
+        }
+
+        return (
+            <div>
+                <div>
+                    <label for="minutes">Minutes</label>
+                    <input value={inverted ? amount*60 : amount} id="minutes" placeholder="Minutes" type="number" onChange={onChange} disabled={inverted}/>
                 </div>
-            )};
-        ReactDOM.render(<App />, root);
-    </script>
+
+                <div>
+                    <label for="hours">Hours</label>
+                    <input value={inverted ? amount : Math.round(amount/60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!inverted}/>
+                </div>
+                <button onClick={reset}>Reset</button>
+                <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
+            </div>
+        )
+    };
+    const KmToMiles = () => {
+        return <h3>Km 2 Mile</h3>
+    }
+    const App = () => {
+        const [index, setIndex] = React.useState('xx');
+        const onSelect = (event) => {
+            setIndex(event.target.value);
+        }
+        return (
+            <div>
+                <h1>Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                    <option value='xx'>Select your units</option>
+                    <option value='0'>Minutes & Hours</option>    
+                    <option value='1'>Km & Miles</option>    
+                </select>
+                <hr />
+                {index === 'xx' ? 'Please select your units' : null }
+                {index === '0' ? <MinutesToHours /> : null }
+                {index === '1' ? <KmToMiles /> : null }
+            </div>
+        )
+    };
+    ReactDOM.render(<App />, root);
+</script>
+
 </html>
