--- a/index.html
+++ b/index.html
@@ -1,71 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<body>
+  <body>
     <div id="root"></div>
-</body>
-<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.18.13/babel.min.js"
-    integrity="sha512-PRl9KbPVEMeO1HV3BU5hcxpipzo2EVLe+tvWfLJf0A7PnKCfShArjZ2iXVAVo8ffpBSfRO0K58TYuquQvVSeVA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script type="text/babel">
-    const root = document.getElementById('root');
+  </body>
+  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.18.13/babel.min.js"></script>
 
-    const MinutesToHours = () => {
-        const [amount, setAmount] = React.useState(0);
-        const [inverted, setInverted] = React.useState(false);
-        const onChange = (event) => {
-            setAmount(event.target.value);
-        }
-        const reset = () => {
-            setAmount(0);
-        }
-        const onInvert = () => {
-            reset();
-            setInverted(current => !current);
-        }
-
-        return (
-            <div>
-                <div>
-                    <label for="minutes">Minutes</label>
-                    <input value={inverted ? amount*60 : amount} id="minutes" placeholder="Minutes" type="number" onChange={onChange} disabled={inverted}/>
-                </div>
-
-                <div>
-                    <label for="hours">Hours</label>
-                    <input value={inverted ? amount : Math.round(amount/60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!inverted}/>
-                </div>
-                <button onClick={reset}>Reset</button>
-                <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
-            </div>
-        )
+  <script type="text/babel">
+    const Btn = (props) => {
+      return (
+        <button
+          onClick={props.changeValue}
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding: "10px 20px",
+            border: 0,
+            borderRadius: 10,
+          }}
+        >
+          {props.text}
+        </button>
+      );
     };
-    const KmToMiles = () => {
-        return <h3>Km 2 Mile</h3>
-    }
+
+    const MemorizedBtn = React.memo(Btn);
+
     const App = () => {
-        const [index, setIndex] = React.useState('xx');
-        const onSelect = (event) => {
-            setIndex(event.target.value);
-        }
-        return (
-            <div>
-                <h1>Super Converter</h1>
-                <select value={index} onChange={onSelect}>
-                    <option value='xx'>Select your units</option>
-                    <option value='0'>Minutes & Hours</option>    
-                    <option value='1'>Km & Miles</option>    
-                </select>
-                <hr />
-                {index === 'xx' ? 'Please select your units' : null }
-                {index === '0' ? <MinutesToHours /> : null }
-                {index === '1' ? <KmToMiles /> : null }
-            </div>
-        )
-    };
-    ReactDOM.render(<App />, root);
-</script>
+      const [value, setValue] = React.useState("Save Changes");
+      const changeValue = () => setValue("Revert Changes");
 
+      return (
+        <div>
+          <MemorizedBtn text={value} changeValue={changeValue} />
+          <MemorizedBtn text="Continue" />
+        </div>
+      );
+    };
+
+    const root = document.getElementById("root");
+    ReactDOM.render(<App />, root);
+  </script>
 </html>
