--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.18.13/babel.min.js"></script>
-
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
   <script type="text/babel">
     const Btn = (props) => {
       return (
@@ -18,6 +18,7 @@
             padding: "10px 20px",
             border: 0,
             borderRadius: 10,
+            fontSize: props.fontSize,
           }}
         >
           {props.text}
@@ -25,16 +26,16 @@
       );
     };
 
-    const MemorizedBtn = React.memo(Btn);
+    Btn.propTypes = {
+      text: PropTypes.string,
+      fontSize: PropTypes.number,
+    };
 
     const App = () => {
-      const [value, setValue] = React.useState("Save Changes");
-      const changeValue = () => setValue("Revert Changes");
-
       return (
         <div>
-          <MemorizedBtn text={value} changeValue={changeValue} />
-          <MemorizedBtn text="Continue" />
+          <Btn text="Save Changes" fontSize={18} />
+          <Btn fontSize={18} text={"Changes"} />
         </div>
       );
     };
